# DeepTensor

./: .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CMakeLists.txt  Makefile  README.md  index.html  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: build-pkg.yml  check_version.yml  ci-test-cpp.yml  ci-test.yml  publish-to-pypi.yml
01-installation/: index.html
csrc/: CMakeLists.txt  jsoncpp.cc  jsoncpp.h  layers.h  loss.cc  main.cc  neural_network.h  non_linear.cc  non_linear.h  optimizer.h  tensor.cc  tensor.h  test_value.cc  utils.h  value.cc  value.h
csrc/layers/: convolutional_layer.h  feed_forward_layer.h  non_linear_layer.h
ctests/: CMakeLists.txt  jsoncpp_read_test.cc  jsoncpp_write_test.cc  loss_test.cc  neural_network_test.cc  nn_test.cc  non_linear_test.cc  random_gen_test.cc  tensor_test.cc  value_fixture_test.cc
demo/: new_model_api.ipynb  roboflow-demo.ipynb
search/: search_index.json
src/deeptensor/: __about__.py  __init__.py  __version__.py
tests/: test_nn.py
